# ynab-sync

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  config.json5.template
app_config/: Cargo.toml
app_config/src/: lib.rs
migration/: Cargo.toml  README.md
migration/src/: main.rs
scotiabank/: Cargo.toml
src/: main.rs
ynab/: Cargo.toml  README.md
ynab/src/: lib.rs  types.rs
ynab/tests/: get_budgets_test.rs
ynab/tests/common/: mod.rs
