[dependencies]
anyhow = {workspace = true}
app-config = {path = "app_config"}
reqwest = "0.12.12"
serde = {workspace = true}
sqlx = {version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "sqlite"]}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}

[package]
edition = "2021"
name = "ynab-sync"
publish = false
version = "0.1.0"

[workspace]
members = ["app_config", "migration"]

[workspace.dependencies]
anyhow = "1.0.96"
sea-orm = {version = "1.1.5", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-uuid"]}
sea-orm-migration = {version = "1.1.5", features = ["sqlx-sqlite", "runtime-tokio-native-tls"]}
serde = {version = "1.0.218", features = ["derive"]}
tokio = {version = "1.43.0", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
